--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -43,7 +43,8 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                                    <button id="filter_table" type="button" class="btn btn-default">Filter Table</button>
+
                                 </form>
                             </div>
                         </div>
