--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -35,7 +35,7 @@
                             <div class="panel-body">
                                 <form id="form">
                                     <div class="form-group">
-                                        <ul class="list-group" id="filters">
+                                        <ul class="list-group">
                                             <li class="filter list-group-item">
                                                 <label for="date">Enter a Date</label>
                                                 <input class="form-control" id="date" type="text"
@@ -43,8 +43,17 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <button id="filter_table" type="button" class="btn btn-default">Filter Table</button>
-
+                                    <div class="form-group">
+                                        <ul class="list-group">
+                                            <li class="filter list-group-item">
+                                                <label for="date">Enter a City</label>
+                                                <input class="form-control" id="city" type="text"
+                                                    placeholder="cleveland">
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <button id="filter_table" type="button" class="btn btn-default">Filter
+                                        Table</button>
                                 </form>
                             </div>
                         </div>
