adding multiple search option

--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -52,7 +52,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                    <button id="filter_table" type="button" class="btn btn-default">Filter
+                                    <button id="filterTableButton" type="button" class="btn btn-default">Filter
                                         Table</button>
                                 </form>
                             </div>
